Fix vertical alignment of text within select input on Firefox.

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -948,6 +948,15 @@ header .search_forms,
     border-radius: 0 2px 2px 0;
   }
 
+  select {
+    border-radius: $border-radius;
+	 border: $border;
+	 background-color: white;
+	 /* this next line is to polyfill the vertical alignment of text within a select element,
+	  * which is different between firefox and chrome. */
+	 padding: 0.3em 0;
+  }
+
   .query_options {
     text-align: right;
     font-size: 10px;
