--- a/app/assets/stylesheets/parameters.scss
+++ b/app/assets/stylesheets/parameters.scss
@@ -16,3 +16,4 @@ $sidebarWidth: 350px;
 $keyline: 1px solid $lightgrey;
 $border-radius: 3px;
 $list-highlight: #FFFFE6;
+$border: 1px solid $grey;
